--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,15 +20,15 @@ classifiers = [
 dependencies = [
     # custom minatar with jit compiled environments
     'MinAtar @ git+https://github.com/andnp/MinAtar',
-    'foragerenv @ git+https://github.com/andnp/forager',
-    
+    'foragerenv @ git+https://github.com/steventango/forager',
+
     'gymnasium[atari, box2d]>=1.0.0',
     'optuna',
     'ale_py',
     'pillow',
     'numba>=0.55.0',
     'chex>=0.1.5',
-    'jax>=0.2.14',
+    'jax[cuda]>=0.2.14',
     'dm-haiku>=0.0.4',
     'optax>=0.0.8',
     'numpy>=1.22.0',
@@ -68,6 +68,3 @@ venvPath = '.'
 venv = '.venv'
 typeCheckingMode = 'standard'
 useLibraryCodeForTypes = true
-
-
-
