--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ dependencies = [
     'pillow',
     'numba>=0.55.0',
     'chex>=0.1.5',
-    'jax[cuda]>=0.2.14',
+    'jax>=0.2.14',
     'dm-haiku>=0.0.4',
     'optax>=0.0.8',
     'numpy>=1.22.0',
