--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
     'pillow',
     'numba>=0.55.0',
     'chex>=0.1.5',
-    'jax>=0.2.14',
+    'jax[cuda12]>=0.2.14',
     'flax>=0.10.3',
     'tensorflow-probability>=0.25.0',
     'dm-haiku>=0.0.4',
