--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ dependencies = [
     'PyExpPlotting-andnp',
     'matplotlib',
     'moviepy',
+    'dill>=0.3.9',
 ]
 
 [project.optional-dependencies]
