--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ dependencies = [
     'matplotlib',
     'moviepy',
     'dill>=0.3.9',
+    'jinja2>=3.1.5',
 ]
 
 [project.optional-dependencies]
